Fix spacing on page B

--- a/app/styles/b.scss
+++ b/app/styles/b.scss
@@ -67,8 +67,6 @@ body {
       }
       .nav-link {
         visibility: visible;
-        display: block;
-        float: left;
       }
     }
   }
